# wasmuri-container

./: Cargo.toml
src/: component.rs  cursor.rs  lib.rs  manager.rs  params.rs
src/component/: behavior.rs  mod.rs
src/container/: flat.rs  layered.rs  mod.rs
src/container/layer/: agent.rs  handle.rs  keylistening.rs  mod.rs  mouselistening.rs  region.rs  render.rs  update.rs
src/layer/: agent.rs  mod.rs  render.rs
src/layer/simple/: clipboardlistening.rs  keylistening.rs  mod.rs  mouselistening.rs  render.rs  update.rs
src/manager/: mod.rs
src/render/: context.rs  mod.rs
src/render/phase/: id.rs  mod.rs  store.rs
