[package]
name = "wasmuri-container"
version = "0.1.0"
authors = ["knokko <knokogator@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
wasmuri-core = { git = "https://github.com/knokko/wasmuri-core" }
wasmuri-events = { git = "https://github.com/knokko/wasmuri-events" }
wasmuri-text = { git = "https://github.com/knokko/wasmuri-text" }

[dependencies.web-sys]
version = "0.3"
features = [ "CssStyleDeclaration", "HtmlElement", "HtmlCanvasElement", "WebGlRenderingContext" ]